# bc-core

./: .gitignore  CHANGELOG.md  README.md  cppcheck-suppressions.txt  meson.build  valgrind.supp
.claude/: CLAUDE.md
.github/workflows/: ci.yml  release.yml
benchmarks/: bench_bc_core_fmt.c  bench_bc_core_format.c  bench_bc_core_ops.c  bench_bc_core_sort.c  bench_bc_core_thresholds.c  meson.build
debian/: changelog  control  copyright
docs/: STUDY-AVX512-INLINE.md  STUDY-R-AND-D.md
fuzzing/: fuzz_bc_core_byte_mask.c  fuzz_bc_core_fmt.c  fuzz_bc_core_format.c  fuzz_bc_core_hash.c  fuzz_bc_core_math.c  fuzz_bc_core_memory.c  fuzz_bc_core_search.c  fuzz_bc_core_sort.c  meson.build
include/internal/: bc_core_align_prologue_internal.h  bc_core_buffer_thresholds_internal.h  bc_core_cache_sizes_internal.h  bc_core_cpu_features_internal.h  bc_core_pattern_internal.h  bc_core_simd_scan_internal.h
include/public/: bc_core.h  bc_core_cpu.h  bc_core_error.h  bc_core_format.h  bc_core_glob.h  bc_core_hash.h  bc_core_io.h  bc_core_math.h  bc_core_memory.h  bc_core_parse.h  bc_core_sort.h  bc_core_test_wrap.h  bc_core_time.h
src/: meson.build
src/cpu/: bc_core_buffer_thresholds.c  bc_core_cache_sizes.c  bc_core_cpu.c  bc_core_cpu_features.c  bc_core_cpu_prefetch.c
src/error/: bc_core_error.c
src/format/: bc_core_format.c  bc_core_format_base32.c  bc_core_format_base64.c  bc_core_format_hex_dump.c
src/glob/: bc_core_glob.c
src/hash/: bc_core_hash_crc32c.c  bc_core_hash_sha256.c
src/io/: bc_core_fmt.c  bc_core_reader.c  bc_core_writer.c
src/math/: bc_core_math.c
src/memory/: bc_core_ascii.c  bc_core_compare.c  bc_core_contains.c  bc_core_copy.c  bc_core_count.c  bc_core_cstring.c  bc_core_equal.c  bc_core_equal_case_insensitive_ascii.c  bc_core_fill.c  bc_core_find.c  bc_core_length.c  bc_core_move.c  bc_core_swap.c  bc_core_zero.c  bc_core_zero_secure.c
src/parse/: bc_core_parse.c
src/sort/: bc_core_sort_with_compare.c
src/time/: bc_core_time.c
tests/: meson.build  test_bc_core_alignment.c  test_bc_core_ascii.c  test_bc_core_buffer_constants.c  test_bc_core_buffer_thresholds_wrap.c  test_bc_core_byte_mask.c  test_bc_core_checksum.c  test_bc_core_checksum_wrap.c  test_bc_core_compare.c  test_bc_core_compare_alignment.c  test_bc_core_compare_dispatch_wrap.c  test_bc_core_contains.c  test_bc_core_copy.c  test_bc_core_copy_dispatch_wrap.c  test_bc_core_copy_page_boundary.c  test_bc_core_copy_wrap.c  test_bc_core_count.c  test_bc_core_count_dispatch_wrap.c  test_bc_core_count_words_ascii.c  test_bc_core_cpu.c  test_bc_core_cpu_dispatch_wrap.c  test_bc_core_cpu_features_cache.c  test_bc_core_cpu_features_cache_concurrent.c  test_bc_core_cpu_wrap.c  test_bc_core_cstring.c  test_bc_core_dispatch_mock.h  test_bc_core_equal_case_insensitive_ascii.c  test_bc_core_equal_dispatch_wrap.c  test_bc_core_error.c  test_bc_core_false_sharing_guard.c  test_bc_core_fill.c  test_bc_core_fill_dispatch_wrap.c  test_bc_core_find.c  test_bc_core_find_dispatch_wrap.c  test_bc_core_fmt.c  test_bc_core_format.c  test_bc_core_format_double_shortest_round_trip.c  test_bc_core_format_extensions.c  test_bc_core_glob.c  test_bc_core_huge_inputs.c  (+21 more)
