bc_core_lib = static_library('bc-core',
    'memory/bc_core_zero.c',
    'memory/bc_core_fill.c',
    'memory/bc_core_copy.c',
    'memory/bc_core_move.c',
    'memory/bc_core_equal.c',
    'memory/bc_core_equal_case_insensitive_ascii.c',
    'memory/bc_core_compare.c',
    'memory/bc_core_find.c',
    'memory/bc_core_count.c',
    'memory/bc_core_contains.c',
    'memory/bc_core_length.c',
    'memory/bc_core_swap.c',
    'memory/bc_core_zero_secure.c',
    'memory/bc_core_ascii.c',
    'hash/bc_core_hash_crc32c.c',
    'hash/bc_core_hash_sha256.c',
    'math/bc_core_math.c',
    'cpu/bc_core_cpu.c',
    'cpu/bc_core_cpu_prefetch.c',
    'cpu/bc_core_cpu_features.c',
    'cpu/bc_core_cache_sizes.c',
    'cpu/bc_core_buffer_thresholds.c',
    'format/bc_core_format.c',
    'io/bc_core_writer.c',
    'io/bc_core_reader.c',
    'error/bc_core_error.c',
    'parse/bc_core_parse.c',
    'sort/bc_core_sort_with_compare.c',
    'time/bc_core_time.c',
    'glob/bc_core_glob.c',
    include_directories : [bc_core_public_inc, bc_core_internal_inc],
    c_args : lto_c_args,
    link_args : lto_link_args,
    install : true,
)

bc_core_dep = declare_dependency(
    link_with : bc_core_lib,
    include_directories : bc_core_public_inc,
)
